<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0033A0"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Texto UNTELS centrado -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Examen de admisión 2024"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Texto Examen de Admisión alineado a la izquierda -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingTop="8dp"
            android:text="Formulario de registro"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/nombresapellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/nombresapellidos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/nombresapellidos"
        app:layout_constraintTop_toBottomOf="@+id/nombresapellidos" />

    <TextView
        android:id="@+id/correoelectronico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correo"
        app:layout_constraintStart_toStartOf="@+id/nombresapellidos"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/correoelectronico"
        app:layout_constraintTop_toBottomOf="@+id/correoelectronico" />

    <TextView
        android:id="@+id/clave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2" />

    <EditText
        android:id="@+id/editTextNumberPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberPassword"
        app:layout_constraintStart_toStartOf="@+id/clave"
        app:layout_constraintTop_toBottomOf="@+id/clave" />

    <TextView
        android:id="@+id/fechanaci"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fechanaci"
        app:layout_constraintStart_toStartOf="@+id/editTextNumberPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberPassword" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="@+id/fechanaci"
        app:layout_constraintTop_toBottomOf="@+id/fechanaci" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Carrera"
        app:layout_constraintStart_toStartOf="@+id/editTextDate"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <RadioButton
            android:id="@+id/ambien"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ambiental" />

        <RadioButton
            android:id="@+id/sistemas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sistemas" />

        <RadioButton
            android:id="@+id/admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/administracion" />

        <RadioButton
            android:id="@+id/meca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mecanica" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="204dp"
        android:text="¿Por qué medio se enteró de la convocatoria?"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <CheckBox
        android:id="@+id/internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/internet"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <CheckBox
        android:id="@+id/amigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amigo"
        app:layout_constraintStart_toStartOf="@+id/internet"
        app:layout_constraintTop_toBottomOf="@+id/internet" />

    <CheckBox
        android:id="@+id/radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio"
        app:layout_constraintStart_toStartOf="@+id/amigo"
        app:layout_constraintTop_toBottomOf="@+id/amigo" />

    <CheckBox
        android:id="@+id/publicidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publicidad"
        app:layout_constraintStart_toStartOf="@+id/radio"
        app:layout_constraintTop_toBottomOf="@+id/radio" />

    <Button
        android:id="@+id/enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#C5A100"
        android:drawableLeft="@mipmap/ic_launcher"
        android:text="@string/enviar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/publicidad" />

</androidx.constraintlayout.widget.ConstraintLayout>
